--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+li {
+    list-style: none;
+}
+
 :link {
   text-decoration: none;  
 }
@@ -57,6 +61,14 @@ h2 p {
     color: black;
 }
 
+h2 {
+    font-size: 18px;
+}
+
+p {
+    font-size: 16px;
+}
+
 .fa-lg {
     font-size: 1.33em;
 }
@@ -91,24 +103,26 @@ h2 p {
 }
 
 .searchbutton {
-width: 200px;
-background-color: #0065FC;
-color: white;
-font-size: 18px;
-border: none;
-border-top-right-radius: 16px;
-border-bottom-right-radius: 16px;
+    width: 200px;
+    background-color: #0065FC;
+    color: white;
+    font-size: 18px;
+    border: none;
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
 }
 
 .filters {
-display: flex;
-align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
 
 }
 
 .filter_list {
     display: flex;
 }
+
 
 .filter_list li {
     list-style: none;
@@ -119,12 +133,69 @@ align-items: center;
 .list_container {
     width: 160px;
     height: 50px;
-    border: 1px solid black;
+    border: 3px solid #F2F2F2;
     border-radius: 25px;
     display: flex;
     box-sizing: content-box;
     align-items: center;
     text-align: justify;
     justify-content: center;
-    padding: 0px 25px;
+}
+
+.fa-money-bill-wave {
+    color: #0065FC;
+}
+
+.fa-child {
+    color: #0065FC;
+}
+
+.fa-heart {
+    color: #0065FC;
+}
+
+.fa-dog {
+    color: #0065FC;
+}
+
+.information {
+    display: flex;
+    text-align: center;
+    align-items: center;
+
+
+}
+
+.fa-info-circle {
+    background: #0065FC;
+    border-radius: 30px;
+    color: white;
+
+}
+
+.hebergements_box {
+    display: flex;
+    height: 630px;
+    width: 865px;
+    border: none;
+    border-radius: 18px;
+    background-color: #F2F2F2;
+}
+
+#box {
+    display: flex;  
+}
+
+.image_box {
+    height: 200px;
+    width: 230px;
+    background-color: white;
+    text-align: center;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+}
+
+.pictures {
+    width: 100%;
 }
