--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 li {
     list-style: none;
 }
@@ -25,9 +30,8 @@ li {
 .nav a {   
 
     display: flex;
-    padding: 30px 52px;
+    padding: 42px 52px;
     text-align: justify;
-    align-content: right;
     text-decoration: none;
 	color: #0065FC;
     font-size: 16px;
@@ -49,16 +53,10 @@ li {
     text-align: justify;
     justify-content: center;
     padding: 30px 52px;
-    position: absolute;
 }
 
 section {
     padding: 50px 52px;
-    position: relative;
-}
-
-h2 p {
-    color: black;
 }
 
 h2 {
@@ -79,8 +77,6 @@ p {
     padding-right: 18px;
 }
 
-
-
 .search_bar {
     width: 25%;
     padding-left: 20px;
@@ -88,7 +84,6 @@ p {
     background-color:#F2F2F2;
     display: flex;
     text-align:center;
-    position: relative;
 }
 
 .searchterm {    
@@ -115,13 +110,14 @@ p {
 .filters {
     display: flex;
     align-items: center;
-    justify-content: baseline;
 
 }
 
 .filter_list {
     display: flex;
+    font-weight: bold;
 }
+
 
 
 .filter_list li {
@@ -129,11 +125,14 @@ p {
     padding: 0px 20px;
 }
 
+.filter_list li:hover {
+    color: #0065FC;
+}
 
 .list_container {
     width: 160px;
     height: 50px;
-    border: 3px solid #F2F2F2;
+    border: 4px solid #F2F2F2;
     border-radius: 25px;
     display: flex;
     box-sizing: content-box;
@@ -142,19 +141,7 @@ p {
     justify-content: center;
 }
 
-.fa-money-bill-wave {
-    color: #0065FC;
-}
-
-.fa-child {
-    color: #0065FC;
-}
-
-.fa-heart {
-    color: #0065FC;
-}
-
-.fa-dog {
+.fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog, .fa-star {
     color: #0065FC;
 }
 
@@ -175,27 +162,47 @@ p {
 
 .hebergements_box {
     display: flex;
-    height: 630px;
-    width: 865px;
+    height: 620px;
+    width: 860px;
     border: none;
     border-radius: 18px;
     background-color: #F2F2F2;
 }
 
 #box {
-    display: flex;  
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.image_box {
-    height: 200px;
-    width: 230px;
-    background-color: white;
-    text-align: center;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 8px;
+.figure {
+
 }
+
+
+.image_box {
+  width: 30%;
+  border: none;
+  border-radius: 18px;
+  background-color: white;
+  padding: 5px;
+}
+
+figcaption {
+    font-weight: bold;
+}
+
 
 .pictures {
     width: 100%;
+    border-top-left-radius: 18px;
+    border-top-right-radius: 18px;
+}
+
+
+.populaires_box {
+    width: 393px;
+    height: 689px;
+    border: none;
+    border-radius: 18px;
+    background-color: #F2F2F2;
 }
