--- a/style.css
+++ b/style.css
@@ -141,7 +141,15 @@ p {
     justify-content: center;
 }
 
-.fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog, .fa-star {
+.fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog {  
+    width: 600px;
+    border: none;
+    border-radius: 50%;
+    color: #0065FC;
+    background-color: #DEEBFF;
+}
+
+.fa-star {
     color: #0065FC;
 }
 
@@ -160,36 +168,30 @@ p {
 
 }
 
-.hebergements_box {
+.heberg_pop {
     display: flex;
-    height: 620px;
-    width: 860px;
+}
+
+.hebergements_box {
     border: none;
     border-radius: 18px;
     background-color: #F2F2F2;
 }
 
-#box {
+.heberg_container {
     display: flex;
     flex-wrap: wrap;
 }
 
-.figure {
-
-}
-
 
 .image_box {
-  width: 30%;
+  width: 20%;
   border: none;
   border-radius: 18px;
   background-color: white;
   padding: 5px;
 }
 
-figcaption {
-    font-weight: bold;
-}
 
 
 .pictures {
@@ -199,10 +201,13 @@ figcaption {
 }
 
 
-.populaires_box {
-    width: 393px;
-    height: 689px;
+#populaires_container {
     border: none;
     border-radius: 18px;
     background-color: #F2F2F2;
+}
+
+.plus_populaires {
+    border-top-left-radius: 18px;
+    border-bottom-left-radius: 18px;
 }
