--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ p {
     border-radius: 50%;
     color: #0065FC;
     background-color: #DEEBFF;
+    padding: 15px;
 }
 
 .fa-star {
@@ -176,6 +177,7 @@ p {
     border: none;
     border-radius: 18px;
     background-color: #F2F2F2;
+    margin-right: 40px;
 }
 
 
@@ -205,11 +207,16 @@ p {
     background-color: white;
 }
 
+.hebergement_style {
+    font-weight: bold;
+}
 
 .pictures {
     width: 100%;
     border-top-left-radius: 18px;
     border-top-right-radius: 18px;
+    position: relative;
+    bottom:50px;
 }
 
 
@@ -248,17 +255,19 @@ p {
 
 
 .activites_container {
-    display: flex;  
+    display: flex;
+    justify-content: center;
 }
 
 .activites_marseille {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .activ_photos {
-    width: 300px;
-    height: 448px;
+    width: 350px;
+    height: 500px;
     overflow: hidden;
     position: relative;
     top: 30px;
@@ -279,12 +288,33 @@ p {
 }
 
 .marseille_activ {
-    width:300px;
-    height: 235px;
+    width:350px;
+    height: 250px;
     overflow: hidden;
     position: relative;
-    top:30px;
     border: 1px solid #F2F2F2;
     box-shadow: #F2F2F2;
-    border-radius: 18px;
+    border-radius: 18px;   
+}
+
+.img_marseille {
+    width:350px;
+    height: 300px;
+    overflow: hidden;
+    position: relative;   
+    border: 1px solid #F2F2F2;
+    box-shadow: #F2F2F2;
+    border-radius: 18px; 
+    display: flex;  
+}
+
+.marseille_position {
+    width:350px;
+    height: 200px;
+    overflow: hidden;
+    position: relative;
+    border: 1px solid #F2F2F2;
+    box-shadow: #F2F2F2;
+    border-radius: 18px;   
+    display: flex;     
 }
