--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ p {
 .list_container {
     width: 160px;
     height: 50px;
-    border: 4px solid #F2F2F2;
+    border: 2px solid #F2F2F2;
     border-radius: 25px;
     display: flex;
     box-sizing: content-box;
@@ -174,10 +174,11 @@ p {
 }
 
 .hebergements_box {
+    width: 70%;
     border: none;
     border-radius: 18px;
     background-color: #F2F2F2;
-    margin-right: 40px;
+    margin-right: 60px;
 }
 
 
@@ -185,6 +186,7 @@ p {
 .heberg_container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 
@@ -193,9 +195,12 @@ p {
   width: 280px;
   border-radius: 18px;
   background-color: white;
-  padding: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 55px;
   overflow: hidden;
   position: relative;
+  margin: 30px;
 }
 
 .legende_hebergement {
@@ -205,7 +210,15 @@ p {
     height: 35%;
     width: 100%;
     background-color: white;
+    padding-top: 15px;
+    padding-left: 15px;
+    line-height: 1.5;
 }
+
+.heb_style {
+    margin: 45px;
+}
+
 
 .hebergement_style {
     font-weight: bold;
@@ -221,18 +234,18 @@ p {
 
 
 #populaires_container {
+    width: 30%;
     border: none;
     border-radius: 18px;
     background-color: #F2F2F2;
 }
 
 .pop_heberg {
-    width: 330px;
+    width: 380px;
     height: 180px;
     overflow: hidden;
     position: relative;
     border-radius: 18px;
-
 }
 
 .plus_populaires {
@@ -240,6 +253,13 @@ p {
     position: relative;
     bottom: 40px;
     right: 50px;    
+}
+
+.autre_plus_populaires {
+    width: 100%;
+    position: relative;
+    bottom: 200px;
+    right: 90px;
 }
 
 .legende_pop {
@@ -263,6 +283,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    position: relative;
 }
 
 .activ_photos {
@@ -270,7 +291,6 @@ p {
     height: 500px;
     overflow: hidden;
     position: relative;
-    top: 30px;
     border: 1px solid#F2F2F2;
     box-shadow: #F2F2F2;
     border-radius: 18px;
@@ -304,8 +324,7 @@ p {
     position: relative;   
     border: 1px solid #F2F2F2;
     box-shadow: #F2F2F2;
-    border-radius: 18px; 
-    display: flex;  
+    border-radius: 18px;
 }
 
 .marseille_position {
@@ -316,5 +335,39 @@ p {
     border: 1px solid #F2F2F2;
     box-shadow: #F2F2F2;
     border-radius: 18px;   
-    display: flex;     
+      
+}
+
+.img_marseille img {
+    position: relative;
+    bottom: 100px;
+}
+
+.footer {
+    background-color: #F2F2F2;
+}
+
+.footer_wrapping{
+    width: 100%;
+    display: flex;
+}
+
+.footer_column{
+    width: 33%; 
+}
+
+.footer_column_title{
+    margin-bottom: 16px;
+}
+
+.footer_link{
+    margin-bottom: 16px;
+}
+.footer_link a {
+    color: black; 
+}
+.footer_link a:hover{
+    color: #0065FC;
+    border-bottom: 3px solid #0065FC;
+    transition-duration: 0.1s;
 }
