--- a/style.css
+++ b/style.css
@@ -6,13 +6,18 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+/*Header*/
+
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-li {
-    list-style: none;
+
+.logo { 
+    text-align: justify;
+    justify-content: center;
+    padding: 30px 52px;
 }
 
 :link {
@@ -33,7 +38,7 @@ li {
     padding: 42px 52px;
     text-align: justify;
     text-decoration: none;
-	color: #0065FC;
+	color: black;
     font-size: 16px;
 }
 
@@ -41,26 +46,59 @@ li {
 {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
 }
-
+li {
+    list-style: none;
+}
 .nav a:hover {
-    color:  black;
+    color:  #0065FC;
     border-top: 3px solid #0065FC;   
 }
 
-.logo { 
-    text-align: justify;
-    justify-content: center;
-    padding: 30px 52px;
+#inscription {
+    color: #0065FC ;
 }
+
+/*Mobile - Recherche et filtres*/
+
+@media screen and (max-width: 768px) {
+    .logo { 
+         height: 60px;
+         padding: 0px 25px;
+       }
+       
+       .nav .menu
+       {
+         display: flex;
+         flex-direction: row-reverse;
+         flex-basis: content;
+         justify-content: center;
+         overflow: auto;
+       }
+        
+ }
+
+/*Tablet - Recherche et filtres*/
+
+@media screen and (min-width: 768px) {
+
+
+
+}
+
+
+
+
+/*Section 1 Recherche et filtres*/
 
 section {
     padding: 50px 52px;
 }
 
 h2 {
-    font-size: 18px;
+    font-size: 25px;
 }
 
 p {
@@ -94,6 +132,10 @@ p {
     padding-left: 18px;
     color: black;
     background-color: white;
+    border-right: none;
+    border-left: none;
+    border-top: 1px solid #F2F2F2;
+    border-bottom: 1px solid #F2F2F2;
 
 }
 
@@ -109,7 +151,12 @@ p {
 
 .filters {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    align-items: center;  
+    justify-content: left;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: 20px;
 
 }
 
@@ -130,29 +177,41 @@ p {
 }
 
 .list_container {
-    width: 160px;
+
+    width: 220px;
     height: 50px;
     border: 2px solid #F2F2F2;
     border-radius: 25px;
     display: flex;
-    box-sizing: content-box;
     align-items: center;
-    text-align: justify;
-    justify-content: center;
+    text-align: center;
+    align-content: center;
+    cursor: pointer;
+    box-shadow: #0065FC;
+}
+
+.texte_lien {
+    margin-left: 30px;
 }
 
 .fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog {  
-    width: 600px;
+    width: 100%;
     border: none;
-    border-radius: 50%;
+    border-radius: 100%;
     color: #0065FC;
     background-color: #DEEBFF;
-    padding: 15px;
+    padding: 16px;
+
 }
 
 .fa-star {
     color: #0065FC;
 }
+
+#empty_star {
+    color: #d9d9d9;
+}
+
 
 .information {
     display: flex;
@@ -168,6 +227,52 @@ p {
     color: white;
 
 }
+
+/*Mobile - Section 1*/
+
+@media screen and (max-width: 768px) {
+    
+
+    section {
+    padding: 0px 0px;
+    }
+    h2 {
+    padding: 0px 20px;
+    }
+    
+    p {
+    padding: 0px 20px;
+
+    }
+
+    .search_bar {
+    margin: 10px;
+    }
+    
+    .filter_list {
+        display:flex;
+        flex-direction: column;
+    }
+
+
+    .filter_list li {
+    list-style: none;
+    padding: 10px 10px;
+    }
+    
+    .information {
+        display: flex;
+        align-items: center;
+        justify-content: center; 
+        margin: 10px;
+    }   
+
+
+
+}
+
+
+/*Section 2 Hebergements et plus populaires*/
 
 .heberg_pop {
     display: flex;
@@ -189,15 +294,22 @@ p {
     justify-content: space-evenly;
 }
 
+figure {
+    box-shadow: 1px 1px 1px #e3e3e3;
+}
+
+a {
+    color: black;
+}
 
 .image_box {
-  height: 210px;
+  height: 200px;
   width: 280px;
   border-radius: 18px;
   background-color: white;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 55px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 85px;
   overflow: hidden;
   position: relative;
   margin: 30px;
@@ -212,11 +324,12 @@ p {
     background-color: white;
     padding-top: 15px;
     padding-left: 15px;
-    line-height: 1.5;
+    line-height: 1.5;   
 }
 
 .heb_style {
-    margin: 45px;
+    margin-left: 45px;
+    margin-bottom: 30px;
 }
 
 
@@ -224,12 +337,22 @@ p {
     font-weight: bold;
 }
 
+h3 {
+    margin-left: 40px;
+    margin-bottom: 30px;
+}
+
+.legende_texte {
+    padding-left: 20px;
+    line-height: 1.5;
+}
+
 .pictures {
     width: 100%;
     border-top-left-radius: 18px;
     border-top-right-radius: 18px;
     position: relative;
-    bottom:50px;
+    bottom:80px;
 }
 
 
@@ -239,20 +362,30 @@ p {
     border-radius: 18px;
     background-color: #F2F2F2;
 }
+.wrapping {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-chart-line {
+    margin-right: 20px;
+    font-size: 25px;
+}
 
 .pop_heberg {
-    width: 380px;
-    height: 180px;
+    width: 400px;
+    height: 160px;
     overflow: hidden;
     position: relative;
     border-radius: 18px;
+    border: 4px solid white;
 }
 
 .plus_populaires {
     width: 100%;
     position: relative;
-    bottom: 40px;
-    right: 50px;    
+    bottom: 60px;
+    right: 90px;    
 }
 
 .autre_plus_populaires {
@@ -273,6 +406,48 @@ p {
     width: 60%;
 }
 
+/*Mobile - Section 2 Hebergements et plus populaires*/
+@media screen and (max-width: 768px) {
+
+    
+    .hebergements_box {
+        width: 100%;
+        background-color: white;
+        padding-top: 20px;
+      }
+
+    #populaires_container {
+        width: 100%;
+        border-radius: 0;
+        
+      }
+      .plus_populaires {
+        display: flex;
+        bottom: 20px;
+        right: 70px;    
+    }
+    .wrapping, .heberg_pop {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+      }
+
+      .legende_texte {
+        width: 100%;
+        align-items: center;
+    }
+
+}
+
+/*Tablet - Section 2 Hebergements et plus populaires*/
+
+@media screen and (min-width: 768px) {
+
+
+
+}
+
+/*Section 3 Actvites*/
 
 .activites_container {
     display: flex;
@@ -296,6 +471,17 @@ p {
     border-radius: 18px;
 }
 
+.image_position {
+    position: relative;
+    right: 95px;
+}
+
+.image_position_second {
+    position: relative;
+    right: 150px;
+    top: 0;
+}
+
 .legende_activites {
     z-index: 100;
     position: absolute;
@@ -314,12 +500,12 @@ p {
     position: relative;
     border: 1px solid #F2F2F2;
     box-shadow: #F2F2F2;
-    border-radius: 18px;   
+    border-radius: 18px; 
 }
 
 .img_marseille {
     width:350px;
-    height: 300px;
+    height: 265px;
     overflow: hidden;
     position: relative;   
     border: 1px solid #F2F2F2;
@@ -333,9 +519,8 @@ p {
     overflow: hidden;
     position: relative;
     border: 1px solid #F2F2F2;
-    box-shadow: #F2F2F2;
     border-radius: 18px;   
-      
+    display: flex;
 }
 
 .img_marseille img {
@@ -343,11 +528,72 @@ p {
     bottom: 100px;
 }
 
+/*Mobile - Activites*/
+
+@media screen and (max-width: 768px) {
+
+
+.Activites {
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;   
+}
+
+.activites_container {
+    width: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+
+}
+
+.marseille_position, .activites_marseille {
+    width: 16%;
+    min-width:330px;
+    height:250px;
+}
+
+.activ_photos, .img_marseille {
+    margin: 0;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+
+.image_position {
+    bottom: 100px;
+
+}
+
+.img_marseille img {
+    bottom: 180px;
+}
+
+
+}
+
+/*Tablet - Activites*/
+
+@media screen and (min-width: 768px) {
+
+
+
+
+
+}
+
+
+
+/*Footer*/
+
 .footer {
     background-color: #F2F2F2;
 }
 
-.footer_wrapping{
+.footer_wrap{
     width: 100%;
     display: flex;
 }
@@ -370,4 +616,26 @@ p {
     color: #0065FC;
     border-bottom: 3px solid #0065FC;
     transition-duration: 0.1s;
+}
+
+/*Mobile - Footer*/
+
+@media screen and (max-width: 768px) {
+    .footer_wrap {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
+    .footer_column {
+        width: 100%;
+    }
+      
+}
+
+
+/*Tablet - Footer*/
+
+@media screen and (min-width: 768px) {
+
 }
